// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectInputField > should display right value on grouped options 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 4px, 0);
    -moz-transform: translate3d(0px, 4px, 0);
    -ms-transform: translate3d(0px, 4px, 0);
    transform: translate3d(0px, 4px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 4px, 0);
    -moz-transform: translate3d(0px, 4px, 0);
    -ms-transform: translate3d(0px, 4px, 0);
    transform: translate3d(0px, 4px, 0);
  }
}

.emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
  width: 100%;
  overflow: hidden;
}

.emotion-6[data-size='small'] {
  height: 32px;
  padding-left: 8px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6[data-state='neutral']:not([data-disabled='true']):hover,
.emotion-6[data-state='neutral']:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-6[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-9 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-13:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-13:hover,
.emotion-13:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-15 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-15 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-17 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-17 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-20 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 4px, 0);
  -moz-transform: translate3d(0px, 4px, 0);
  -ms-transform: translate3d(0px, 4px, 0);
  transform: translate3d(0px, 4px, 0);
  width: 100%;
  background-color: #ffffff;
  color: #3f4250;
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
  padding: 0;
}

.emotion-20[data-animated="true"] {
  -webkit-animation: 0ms animation-0 forwards;
  animation: 0ms animation-0 forwards;
}

.emotion-20[data-has-arrow="true"]::after {
  content: " ";
  position: absolute;
  top: -5px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-20[data-visible-in-dom="false"] {
  display: none;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 256px;
  overflow-y: scroll;
  padding: 0;
  padding-bottom: 4px;
  padding-top: 4px;
}

.emotion-24[data-grouped="true"] {
  padding-top: 0;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-28 {
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  background-color: #f9f9fa;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  padding-right: 16px;
  padding-left: 16px;
  height: 32px;
  text-align: left;
  margin-bottom: 2px;
}

.emotion-30:focus {
  background-color: #f9f9fa;
  outline: none;
}

.emotion-30[data-selectgroup='true'] {
  padding-left: 16px;
  border-left: 4px solid #f9f9fa;
}

.emotion-30[data-selectgroup='true']:focus {
  background-color: #e9eaeb;
}

.emotion-32 {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
}

.emotion-36 {
  text-align: left;
  border: none;
  background-color: #ffffff;
  padding: 12px 16px 12px 16px;
  margin-left: 4px;
  margin-right: 4px;
  color: #3f4250;
  border-radius: 4px;
}

.emotion-36:hover,
.emotion-36:focus {
  background-color: #f1eefc;
  color: #641cb3;
  cursor: pointer;
  outline: none;
}

.emotion-36[data-selected='true'] {
  background-color: #f1eefc;
}

.emotion-36[disabled] {
  background-color: #f3f3f4;
  color: #b5b7bd;
}

.emotion-36[disabled]:hover,
.emotion-36 [disabled]:focus {
  background-color: #f3f3f4;
  color: #b5b7bd;
  cursor: not-allowed;
  outline: none;
}

.emotion-40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow: hidden;
}

.emotion-43 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  overflow: auto;
  text-overflow: ellipsis;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 100%;
}

.emotion-63 {
  color: #727683;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":rh:"
          aria-describedby=":rh:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-label=""
              class="emotion-6 emotion-7"
              data-disabled="false"
              data-dropdownvisible="true"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id=":rg:"
              role="combobox"
              tabindex="0"
            >
              <div
                class="emotion-8 emotion-9 emotion-10"
              >
                Mercury
              </div>
              <div
                class="emotion-11 emotion-12"
              >
                <button
                  aria-label="clear value"
                  class="emotion-13 emotion-14"
                  data-testid="clear-all"
                  type="button"
                >
                  <svg
                    class="emotion-15 emotion-16"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
                <svg
                  aria-label="show dropdown"
                  class="emotion-17 emotion-16"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="emotion-19 emotion-20 emotion-21"
            data-animated="false"
            data-has-arrow="false"
            id=":rh:"
            role="dialog"
            style="opacity: 1;"
          >
            <div
              class="emotion-22 emotion-5"
            >
              <div
                class="emotion-24 emotion-25"
                data-grouped="true"
                id="select-dropdown"
                role="listbox"
              >
                <div
                  class="emotion-26 emotion-5"
                >
                  <div
                    class="emotion-28 emotion-29"
                  >
                    <button
                      class="emotion-30 emotion-31"
                      data-selectgroup="false"
                      data-testid="group-0"
                      role="group"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="emotion-32 emotion-10"
                      >
                        TERRESTRIAL PLANETS
                      </span>
                    </button>
                  </div>
                  <div
                    class="emotion-26 emotion-5"
                    id="items"
                  >
                    <button
                      aria-label="mercury"
                      class="emotion-36 emotion-37"
                      data-selected="true"
                      data-testid="option-mercury"
                      id="option-0"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-mercury"
                      >
                        <div
                          class="emotion-40 emotion-41"
                        >
                          <span
                            class="emotion-42 emotion-43 emotion-10"
                          >
                            Mercury
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-label="venus"
                      class="emotion-36 emotion-37"
                      data-selected="false"
                      data-testid="option-venus"
                      id="option-1"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-venus"
                      >
                        <div
                          class="emotion-40 emotion-41"
                        >
                          <span
                            class="emotion-42 emotion-43 emotion-10"
                          >
                            Venus
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-label="earth"
                      class="emotion-36 emotion-37"
                      data-selected="false"
                      data-testid="option-earth"
                      id="option-2"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-earth"
                      >
                        <div
                          class="emotion-40 emotion-41"
                        >
                          <span
                            class="emotion-42 emotion-43 emotion-10"
                          >
                            Earth
                          </span>
                        </div>
                        <span
                          class="emotion-63 emotion-10"
                        >
                          Our home planet
                        </span>
                      </div>
                    </button>
                    <button
                      aria-label="mars"
                      class="emotion-36 emotion-37"
                      data-selected="false"
                      data-testid="option-mars"
                      disabled=""
                      id="option-3"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-mars"
                      >
                        <div
                          class="emotion-40 emotion-41"
                        >
                          <span
                            class="emotion-42 emotion-43 emotion-10"
                          >
                            Mars
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-label="pluto"
                      class="emotion-36 emotion-37"
                      data-selected="false"
                      data-testid="option-pluto"
                      id="option-4"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-pluto"
                      >
                        <div
                          class="emotion-40 emotion-41"
                        >
                          <span
                            class="emotion-42 emotion-43 emotion-10"
                          >
                            Pluto
                          </span>
                        </div>
                        <span
                          class="emotion-63 emotion-10"
                        >
                          Pluto does not fit the usual classification of either terrestrial or Jovian planets, but is rocky
                        </span>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-26 emotion-5"
                >
                  <div
                    class="emotion-28 emotion-29"
                  >
                    <button
                      class="emotion-30 emotion-31"
                      data-selectgroup="false"
                      data-testid="group-1"
                      role="group"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="emotion-32 emotion-10"
                      >
                        JOVIAN PLANETS
                      </span>
                    </button>
                  </div>
                  <div
                    class="emotion-26 emotion-5"
                    id="items"
                  >
                    <button
                      aria-label="jupiter"
                      class="emotion-36 emotion-37"
                      data-selected="false"
                      data-testid="option-jupiter"
                      id="option-0"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-jupiter"
                      >
                        <div
                          class="emotion-40 emotion-41"
                        >
                          <span
                            class="emotion-42 emotion-43 emotion-10"
                          >
                            Jupiter
                          </span>
                        </div>
                        <span
                          class="emotion-63 emotion-10"
                        >
                          Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass more than two and a half times that of all the other planets in the Solar System combined, and slightly less than one one-thousandth the mass of the Sun.
                        </span>
                      </div>
                    </button>
                    <button
                      aria-label="saturn"
                      class="emotion-36 emotion-37"
                      data-selected="false"
                      data-testid="option-saturn"
                      id="option-1"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-saturn"
                      >
                        <div
                          class="emotion-40 emotion-41"
                        >
                          <span
                            class="emotion-42 emotion-43 emotion-10"
                          >
                            Saturn
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-label="uranus"
                      class="emotion-36 emotion-37"
                      data-selected="false"
                      data-testid="option-uranus"
                      id="option-2"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-uranus"
                      >
                        <div
                          class="emotion-40 emotion-41"
                        >
                          <span
                            class="emotion-42 emotion-43 emotion-10"
                          >
                            Uranus
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-label="neptune"
                      class="emotion-36 emotion-37"
                      data-selected="false"
                      data-testid="option-neptune"
                      id="option-3"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-neptune"
                      >
                        <div
                          class="emotion-40 emotion-41"
                        >
                          <span
                            class="emotion-42 emotion-43 emotion-10"
                          >
                            Neptune
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
  width: 100%;
  overflow: hidden;
}

.emotion-6[data-size='small'] {
  height: 32px;
  padding-left: 8px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6[data-state='neutral']:not([data-disabled='true']):hover,
.emotion-6[data-state='neutral']:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-6[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-9 {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r1:"
          aria-describedby=":r1:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label=""
              class="emotion-6 emotion-7"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id=":r0:"
              role="combobox"
              tabindex="0"
            >
              <p
                class="emotion-8 emotion-9 emotion-10"
              >
                Select item
              </p>
              <div
                class="emotion-11 emotion-12"
              >
                <svg
                  aria-label="show dropdown"
                  class="emotion-13 emotion-14"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
  width: 100%;
  overflow: hidden;
}

.emotion-6[data-size='small'] {
  height: 32px;
  padding-left: 8px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6[data-state='neutral']:not([data-disabled='true']):hover,
.emotion-6[data-state='neutral']:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-6[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-9 {
  color: #b5b7bd;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  vertical-align: middle;
  fill: #b5b7bd;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: #b5b7bd;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r5:"
          aria-describedby=":r5:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label=""
              class="emotion-6 emotion-7"
              data-disabled="true"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id=":r4:"
              role="combobox"
              tabindex="0"
            >
              <p
                class="emotion-8 emotion-9 emotion-10"
              >
                Select item
              </p>
              <div
                class="emotion-11 emotion-12"
              >
                <svg
                  aria-label="show dropdown"
                  class="emotion-13 emotion-14"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectInputField > should render correctly grouped 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
  width: 100%;
  overflow: hidden;
}

.emotion-6[data-size='small'] {
  height: 32px;
  padding-left: 8px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6[data-state='neutral']:not([data-disabled='true']):hover,
.emotion-6[data-state='neutral']:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-6[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-9 {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":rd:"
          aria-describedby=":rd:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label=""
              class="emotion-6 emotion-7"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id=":rc:"
              role="combobox"
              tabindex="0"
            >
              <p
                class="emotion-8 emotion-9 emotion-10"
              >
                Select item
              </p>
              <div
                class="emotion-11 emotion-12"
              >
                <svg
                  aria-label="show dropdown"
                  class="emotion-13 emotion-14"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectInputField > should render correctly multiselect 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
  width: 100%;
  overflow: hidden;
}

.emotion-6[data-size='small'] {
  height: 32px;
  padding-left: 8px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6[data-state='neutral']:not([data-disabled='true']):hover,
.emotion-6[data-state='neutral']:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-6[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-9 {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-13 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r9:"
          aria-describedby=":r9:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label=""
              class="emotion-6 emotion-7"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id=":r8:"
              role="combobox"
              tabindex="0"
            >
              <p
                class="emotion-8 emotion-9 emotion-10"
              >
                Select item
              </p>
              <div
                class="emotion-11 emotion-12"
              >
                <svg
                  aria-label="show dropdown"
                  class="emotion-13 emotion-14"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectInputField > should trigger events 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width="true"] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
  width: 100%;
  overflow: hidden;
}

.emotion-6[data-size='small'] {
  height: 32px;
  padding-left: 8px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6[data-state='neutral']:not([data-disabled='true']):hover,
.emotion-6[data-state='neutral']:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-6[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-6[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-9 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-13:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-13:hover,
.emotion-13:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-15 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-15 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-17 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-17 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r1e:"
          aria-describedby=":r1e:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label=""
              class="emotion-6 emotion-7"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-input-test"
              id=":r1d:"
              role="combobox"
              tabindex="0"
            >
              <div
                class="emotion-8 emotion-9 emotion-10"
              >
                Mercury
              </div>
              <div
                class="emotion-11 emotion-12"
              >
                <button
                  aria-label="clear value"
                  class="emotion-13 emotion-14"
                  data-testid="clear-all"
                  type="button"
                >
                  <svg
                    class="emotion-15 emotion-16"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
                <svg
                  aria-label="show dropdown"
                  class="emotion-17 emotion-16"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
